@@ -7,6 +7,7 @@ Changes in 1.3:
 - Make TimeEstimator return sortable values (298542)
 - Keep track of partitions files of torrents are on
 - Add methods to check if storage is mounted
+- Make sure all trackers are used of a magnet link (302997, 303269)
 
 Changes in 1.2.1:
 - Fix deadlock in webseeding code (295719)
